Try to switch to ZGC